src/components/components/header/header.scss
@import './../../base-styles/init/init';

// Header
//
// Adds header styles and layout.
.header {
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 5;

  // Leaves only capital letters visible on mobile.
  &__ossn-logo-letters {
    @include visually-hidden;
  }

  &__logo {
    position: absolute;
    top: 19px;
    z-index: 2;
  }

  &__ossn-logo {
    font-family: $zilla-slab;
    width: 145px;
    font-size: 27px;
    line-height: 26px;
    font-weight: 600;
    letter-spacing: 0.4px;
    color: color('black');
    display: block;
  }

  &__mozilla-logo {
    width: 48px;
    height: 16px;
    transition: background-size .3s cubic-bezier(0.19, 1, 0.22, 1);
    background-image: url('./mozilla-wordmark-black.svg');
    background-repeat: no-repeat;
    display: block;
    background-size: contain;
    overflow: hidden;
    text-indent: 120%;
    white-space: nowrap;
  }

  &__inner {
    padding-left: 0;
    padding-right: 0;
    border-radius: 0;
    padding-top: 0;
    min-height: 80px;
  }

  &__button {
    float: right;
    margin-right: 10px;
    position: relative;
    z-index: 2;
    margin-top: 20px;
    background-color: transparent;
    color: color('brand');

    &:focus,
    &:hover {
      background-color: transparent;
      color: color('brand');
    }
  }

  &__navigation-container {
    position: relative;
    padding-bottom: 0;
  }

  &__bottom {
    &-inner {
      display: flex;
      flex-wrap: wrap;
      width: 100%;
      padding-top: 50px;

      >*:nth-child(1) {
        order: 2;
        width: 100%;
      }

      >*:nth-child(2) {
        order: 1;
        width: 100%;
      }
    }
  }

  &__menu-icon {
    background-color: transparent;
  }

  @include breakpoint(0 $tablet - 1px) {
    &__navigation-container {
      display: flex;
      flex-direction: column;
      width: 100%;

      &.is-collapsed {
        display: none;
      }
    }

    &__bottom {
      padding-top: 0;
      padding-bottom: 30px;
      order: 2;

      &-inner {
        padding-top: 0;

        .main-navigation__item-wrapper {
          padding-top: 0;
        }
      }
    }

    &__top {
      padding-top: 30px;
       order: 1;

      .secondary-navigation__list {
        padding-bottom: 0;
      }
    }
  }

  @include breakpoint($tablet) {
    margin-top: 40px;

    &__inner {
      padding-bottom: 0;
    }

    &__button {
      display: none;
    }

    &__ossn-logo-letters {
      @include visually-hidden--off;
    }

    &__top {
      position: absolute;
      top: 0;
      transform: translateY(-100%);
      width: 100%;
    }

    &__bottom {
      &-inner {
        overflow: visible;
        display: flex;
        align-items: center;
        height: 100px;
      }
    }

    &__logo {
      margin-right: auto;
      top: 17px;
    }

    &__ossn-logo {
      font-family: $zilla-slab;
      width: 183px;
      font-size: 23px;
      line-height: 23px;
      font-weight: 600;
      letter-spacing: 0.3px;
      color: color('black');
      display: block;

      &-word {
        display: inline-block;
        margin-right: 4px;
      }
    }

    &__mozilla-logo {
      width: 58px;
      height: 18px;
      margin-top: 2px;
      transition: background-size .3s cubic-bezier(0.19, 1, 0.22, 1);
      background-image: url('./mozilla-wordmark-black.svg');
      background-repeat: no-repeat;
      display: block;
      background-size: contain;
      overflow: hidden;
      text-indent: 120%;
      white-space: nowrap;
    }

    &__bottom {
      &-inner {
        display: flex;
        flex-wrap: nowrap;
        padding-top: 0;
        justify-content: flex-end;

        >*:nth-child(1) {
          order: 1;
          width: auto;
        }

        >*:nth-child(2) {
          order: 2;
          width: auto;
        }
      }
    }
  }
}

